...
            return this.renderDetail()
        } else if(type === 'showroom') {
            return this.renderShowroom()
        }
        
        return (
            <View style={[Styles.container, Platform.OS === 'ios' &&  Styles.iosContainer]} testID='navbarContainer'>
                <View style={Styles.innerContainer}>
                    <View style={Styles.navButtonLeftContainer}>
                        <TouchableOpacity onPress={this._openDrawer} testID='sidemenuBtn'>
                            <View style={Styles.navButtonLeftInnerContainer} testID='hamburgerBtn'>
                                <Image source={Images.hamburgerMenuIcon} style={Styles.navButtonLeftImg} resizeMode='contain'/>
                            </View>
                        </TouchableOpacity>
                    </View>

                    <View style={Styles.searchBar}>
...
