...
            viewListingDetail,
            pageStatus,
            sortby
        } = this.props

        return (
            <View testID='featuredListingsContainer' ref='listings' style={[ApplicationStyles.layout.fullBackground]}>
                <View style={Styles.container}>
                    <View style={Styles.toolBarContainer}>
                        <ToolBar navigator={this.props.navigator}/>
                    </View>
                    <View style={Styles.contentsContainer}>
                        <Listings
...
                    subDesc="Sign up is super easy!"
                    subDescStyle={Styles.subDescText}
                    icon = {Images.needToLogin}
                    iconStyle = {Styles.modalIcon}
                    secondButton={true}
                    buttonLabel="Log In"
                    secondLabel="Cancel"
                    onSecond={() => this._closeNoticeModal()}
                    onClick={() => this._onClickUserLogin()}
                />
                }

                <SimpleAlert
...
