...
                {
                    label: 'Coupons',
                    screen: 'carmate.Coupons',
                    icon: Images.navCouponsIcon,
                    selectedIcon: Images.navCouponsIconActive,
                    title: 'Car Mate',
                    testID: 'CouponsTab',
                    navigatorStyle
                },
                {
                    label: 'Saved',
                    screen: 'carmate.Saved',
                    icon: Images.navSavedIcon,
...
