...
                    <TouchableOpacity onPress={() => this.searchBar.focus()} testID='searchbarIcon'>
                        <View style={[Styles.iconContainer]}>
                            <Image style={Styles.thunderIcon} source={Images.searchbarIcon} resizeMode='contain' />
                        </View>
                    </TouchableOpacity>
                    <TextInput
                        testID='searchbarInput'
                        style={Styles.textInput}
                        ref={ref => this.searchBar = ref}
                        autoCapitalize='none'
                        autoFocus={false}
                        autoCorrect={false}
                        blueOnSubmit={true}
...
